--- a/Style.css
+++ b/Style.css
@@ -1,81 +1,120 @@
-
-    
-header{
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 10px;
-    padding: 5px;
-    position: relative; 
+header {
+  display: flex;
+  justify-content: flex-end;
+  margin-left: 10px;
+  padding: 5px;
+  position: relative;
 }
 
-.container-fluid{
-    background-color: rgb(151, 0, 0);    
-    color: aliceblue;
+.container-fluid {
+  background-color: rgb(151, 0, 0);
+  color: aliceblue;
 }
-.navbar-nav{
-   color: aliceblue;
+.navbar-nav {
+  color: aliceblue;
 }
-#btn-primary{
-    background-color:rgb(151, 0, 0);
+.nabvaricono{
+  color: black;
+}
+.nabvaricono :hover{
+  color: rgb(0, 0, 0);
+  background-color: rgb(233, 0, 0);
+}
+.navbar_responsive{
+  display: none;
 }
 
-#logo{
-    position: absolute;
-    width: 150px;
-    top: 25px;
-    left: 0px;
+#btn-primary {
+  background-color: rgb(151, 0, 0);
 }
-.carousel-inner{
-    height: 400px;
+
+#logo {
+  position: absolute;
+  width: 150px;
+  top: 25px;
+  left: 0px;
 }
-.carousel-item{
-    height: 400px;
+.carousel-inner {
+  height: 400px;
 }
-#contactform{
-    display: flex;
-    flex-direction: column;
-    padding-top: 40px; 
-    justify-content: center;      
+.carousel-item {
+  height: 400px;
 }
-.contenedorcard{
-    display: flex;
-    padding: 40px;    
+#contactform {
+  display: flex;
+  flex-direction: column;
+  padding-top: 40px;
+  justify-content: center;
 }
-.tablestadistics{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;    
-    margin-left: 50px;
-    margin-right: 50px;
+.contenedorcard {
+  display: flex;
+  padding: 40px;
 }
-.tablestadistics th, .tablestadistics td{
-    padding: 1em;
-  border: 1px solid;  
+.tablestadistics {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
-.tablestadistics th{
-    background-color: darkred;
+.tablestadistics th,
+.tablestadistics td {
+  padding: 1em;
+  border: 1px solid;
+}
+.tablestadistics th {
+  background-color: darkred;
   color: rgb(0, 0, 0);
   font-weight: bold;
 }
-.form-check{
-    padding: 20px;    
+.form-check {
+  padding: 20px;
 }
 
-.fb{
-    width: 40px;
-    height: 40px;
+.fb {
+  width: 40px;
+  height: 40px;
 }
-.ig{
-    width: 40px;
-    height: 40px;
+.ig {
+  width: 40px;
+  height: 40px;
 }
-.wsp{
-    width: 40px;
-    height: 40px;
+.wsp {
+  width: 40px;
+  height: 40px;
 }
+
 @media (any-hover: hover) {
-  div>a:hover {
+  div > a:hover {
     background: rgb(233, 0, 0);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .navbar-nav{
+    display: none;
+  }
+  .navbar_responsive{
+    display: block;
+  }
+}
+@media all and (max-width: 800px) {
+    header{
+        width: auto;
+    }
+    body{
+        width: auto;
+    }
+  .navbar-nav {
+    justify-content: end;
+  }
+  #logo {
+    flex: 1;
+  }
+  .nav-link {
+    width: auto;
+    order: 1;
+    display: block;
+    padding: 7.5px 15px;
   }
 }
